--- a/app/src/main/res/layout/item_tag_description.xml
+++ b/app/src/main/res/layout/item_tag_description.xml
@@ -17,7 +17,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <TextView
-        android:id="@+id/item_tag_name"
+        android:id="@+id/item_tag_name_txt"
         android:textSize="18sp"
         android:layout_toRightOf="@+id/item_tag_img"
         android:text="项目工作"
