提交无数据时的背景问题

--- a/app/src/main/res/layout/item_stage_null.xml
+++ b/app/src/main/res/layout/item_stage_null.xml
@@ -9,7 +9,7 @@
     </data>
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:background="@drawable/base_line_cf"
+        android:background="@drawable/base_line_wfe"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
