更新提交内容

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,6 +42,9 @@
             android:layout_alignParentBottom="true"
             android:background="#ffffff"
             android:id="@+id/page_index"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="2dp"
+            android:layout_marginRight="2dp"
             android:layout_height="60dp"
             android:orientation="horizontal">
 
