--- a/app/src/main/res/layout/actionbar_week_to_choose.xml
+++ b/app/src/main/res/layout/actionbar_week_to_choose.xml
@@ -2,9 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="200dp">
+    android:layout_height="280dp">
     <ListView
         android:id="@+id/list_item"
+        android:background="#FFFFFF"
         android:layout_width="match_parent"
         android:layout_height="match_parent"></ListView>
 </LinearLayout>
