--- a/app/src/main/res/layout/fragment_header.xml
+++ b/app/src/main/res/layout/fragment_header.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
 
-    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -21,6 +21,16 @@
                 android:layout_marginRight="10dp"
                 android:background="@drawable/bg_white" />
         </com.jwenfeng.library.pulltorefresh.PullToRefreshLayout>
-
-    </FrameLayout>
+        <Button
+            android:background="@drawable/login_btn_background_gray"
+            android:textSize="18sp"
+            android:text="整体情况"
+            android:id="@+id/summary_total"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="40dp"
+            android:layout_width="match_parent"
+            android:layout_height="50dp" />
+    </RelativeLayout>
 </layout>
