--- a/app/src/main/res/layout/listview_item.xml
+++ b/app/src/main/res/layout/listview_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="30dp">
+    android:layout_height="wrap_content">
     <TextView
         android:layout_alignParentLeft="true"
         android:id="@+id/list_item_text"
@@ -9,6 +9,8 @@
         android:layout_height="wrap_content"
         android:paddingLeft="15dp"
         android:textSize="18sp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:layout_centerVertical="true"
         android:textColor="@color/colorAccent"/>
     <ImageView
@@ -16,6 +18,8 @@
         android:id="@+id/list_item_img"
         android:layout_alignParentRight="true"
         android:layout_marginRight="15dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:layout_centerVertical="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
