--- a/app/src/main/res/layout/fragment_personal.xml
+++ b/app/src/main/res/layout/fragment_personal.xml
@@ -57,11 +57,13 @@
                 android:layout_marginRight="15dp"
                 android:layout_marginTop="15dp"
                 android:layout_marginBottom="15dp"
+                android:textSize="18sp"
                 android:layout_centerVertical="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
         </RelativeLayout>
         <RelativeLayout
+            android:visibility="gone"
             android:background="@drawable/base_line"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
