--- a/app/src/main/res/layout/listview_item.xml
+++ b/app/src/main/res/layout/listview_item.xml
@@ -3,12 +3,13 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <TextView
-        android:layout_alignParentLeft="true"
         android:id="@+id/list_item_text"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="15dp"
         android:textSize="18sp"
+        android:gravity="start"
+        android:layout_toLeftOf="@id/list_item_img"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:layout_centerVertical="true"
